# SandingHub

./: .gitmodules  README.md
Sanding_PMSMControl_HX0025EDC_v1.0/Debug/: makefile
Sanding_PMSMControl_HX0025EDC_v1.0/Debug/haawking-drivers/haawking-dsc280025_edc-board/: ecap.d  eqep.d  pmbus.d
Sanding_PMSMControl_HX0025EDC_v1.0/Debug/src/: main.d  subdir.mk
Sanding_PMSMControl_HX0025EDC_v1.0/Debug/src_board/: hal.d
Sanding_PMSMControl_HX0025EDC_v1.0/haawking-drivers/haawking-dsc280025_edc-board/: can.h  cmpss.h  dma.h  eqep.h  pmbus.h  xbar.c
Sanding_PMSMControl_HX0025EDC_v1.0/haawking-drivers/haawking-dsc280025_edc-board/common/: crt.S
Sanding_PMSMControl_HX0025EDC_v1.0/src_control/: motor1_drive.c  motor_common.h
pmsm-hx280025c/Sanding_PMSMControl_HX0025EDC_v1.0/: .project
pmsm-hx280025c/Sanding_PMSMControl_HX0025EDC_v1.0/haawking-drivers/haawking-dsc280025_edc-board/: pmbus.c
pmsm-hx280025c/motor_control/: 接线说明.txt
pmsm-hx280025c/motor_control/EDC/Sanding_PMSMControl_HX0025EDC_v1.0/: Sanding_PMSMControl_HX0025EDC_v1.0.launch
pmsm-hx280025c/motor_control/EDC/Sanding_PMSMControl_HX0025EDC_v1.2/: .cproject
pmsm-hx280025c/motor_control/EDC/Sanding_PMSMControl_HX0025EDC_v1.3/: .cproject  .project  Sanding_PMSMControl_HX0025EDC_v1.3.launch
pmsm-hx280025c/motor_control/EDD/Sanding_PMSMControl_HX0025EDD_DriverBoard1.0_v1.0_load/: .cproject  .project  Sanding_PMSMControl_HX0025EDD_DriverBoard1.0_v1.0_load.launch  openocd.exe.stackdump
pmsm-hx280025c/motor_control/EDD/Sanding_PMSMControl_HX0025EDD_DriverBoard1.1_v1.1/: .cproject  .desc  .project  Sanding_PMSMControl_HX0025EDD_DriverBoard1.1_v1.1.launch
pmsm-hx280025c/project/: 接线说明.txt
pmsm-hx280025c/project/Sanding_PMSMControl_HX0025EDC_v1.0/: .cproject
pmsm-hx280025c/project/Sanding_PMSMControl_HX0025EDC_v1.1/: Sanding_PMSMControl_HX0025EDC_v1.1.launch  openocd.exe.stackdump
pmsm-hx280025c/project/Sanding_PMSMControl_HX0025EDC_v1.2/: .cproject  .project
pmsm-hx280025c/project/Sanding_PMSMControl_HX0025EDC_v1.3/: .cproject  openocd.exe.stackdump
pmsm-hx280025c/screen/project/: 接线方式.txt
pmsm-hx280025c/screen/project/0_button/display_st7789v/main/: CMakeLists.txt  main.c
pmsm-hx280025c/screen/project/0_button/display_st7789v/main/lv_port/: lv_port_disp.c  lv_port_disp.h
pmsm-hx280025c/screen/project/3_screen_control/display_st7789v/components/bsp/: CMakeLists.txt
pmsm-hx280025c/screen/project/3_screen_control/display_st7789v/components/bsp/gt911_driver/: esp_lcd_touch_gt911.h
pmsm-hx280025c/screen/project/3_screen_control/display_st7789v/main/: CMakeLists.txt  main.c
pmsm-hx280025c/screen/project/3_screen_control/display_st7789v/main/com/: can.c  can.h
pmsm-hx280025c/screen/project/3_screen_control/display_st7789v/main/lv_port/: lv_port_disp.c  lv_port_indev.h
pmsm-hx280025c/screen/project/3_screen_control/display_st7789v/main/lv_ui/custom/: custom.c
pmsm-hx280025c/show/Sanding_PMSMControl_HX0025EDC_v1.2/: .cproject
(+563 files in other folders)
